--- a/src/main/resources/templates/front/angular/listComponent.mustache
+++ b/src/main/resources/templates/front/angular/listComponent.mustache
@@ -91,6 +91,10 @@ export class {{entity}}ListComponent implements OnInit {
   searchField = 'name';
   searchTerm = '';
 
+  {{#childItems}}
+    {{childModelLowerCase}}Items = this.{{entityLowerCase}}Service.{{childModelLowerCase}}Items;
+{{/childItems}}
+
   @Output() searchFieldChange = new EventEmitter<string>();
   @Output() searchTermChange = new EventEmitter<string>();
 
