--- a/src/main/resources/templates/front/angular/listHtml.mustache
+++ b/src/main/resources/templates/front/angular/listHtml.mustache
@@ -150,6 +150,7 @@
   [fileManagers]="fileManagers()"
   {{/isFileManager}}
   [isFileManager]= {{isFileManager}}
+  [childItems]="childItems"
 />
 
 <app-global-drawer-form
