--- a/src/main/resources/templates/front/angular/view.component.html.mustache
+++ b/src/main/resources/templates/front/angular/view.component.html.mustache
@@ -14,7 +14,7 @@
 
     <div class="flex flex-row justify-between">
     {{#childItems}}
-      <app-child-item [items]="{{childModelLowerCase}}Items()" [title]="'{{childModel}}'" />
+      <app-child-item [items]="{{childModelLowerCase}}Items()" [title]="'{{childTitle}}'" />
       {{/childItems}}
     </div>
 
